[clean] changeMsg -> change

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gas": "node scripts/gas",
     "balance": "node scripts/balance",
     "hello": "node scripts/hello",
-    "change": "node scripts/changeMsg",
+    "change": "node scripts/change",
     "view": "node scripts/view"
   },
   "keywords": [],
